applications/external-services/templates/service.yaml
# network
---
apiVersion: v1
kind: Service
metadata:
  name: router-001
  namespace: &namespace external-services
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: switch-001
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: switch-002
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: omada-controller
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

# PVE
---
apiVersion: v1
kind: Service
metadata:
  name: pve
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: pbs
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http

# applications
---
apiVersion: v1
kind: Service
metadata:
  name: fileshare
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: https
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  namespace: *namespace
  annotations:
    traefik.ingress.kubernetes.io/service.serversscheme: http
spec:
  type: ClusterIP
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
